Making single listener default element.

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+      "polymer": "Polymer/polymer#1.9 - 2"
   }
 }
